wrote section about vault

--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -4,6 +4,7 @@
 \begin{acronym}[BPMN] % längstes Kürzel wird verw. für den Abstand zw. Kürzel u. Text
 
 	% Alphabetisch selbst sortieren - nicht verwendete Kürzel rausnehmen!
+	\acro{acl}[ACL]{Access Control List}
 	% \acro{AIR}{Adobe Integrated Runtime}
 	% \acro{AJAX}{Asynchronous Javascript and XML}
 	% \acro{ANSI}{American National Standards Institute}
@@ -33,6 +34,7 @@
 	% \acro{UEFI}{Unified Extensible Firmware Interface}
 	% \acro{URI}{Uniform Resource Identifier}
 	% \acro{USB}{Universal Serial Bus}
+	\acro{vcs}[VCS]{Version Control System}
 	% \acro{VLAN}{Virtual Local Area Network}
 	% \acro{WYSISWG}{What You See Is What You Get}
 	\acro{xes}[XES]{eXtensible Event Stream}
