--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -10,6 +10,7 @@
 	% \acro{ANSI}{American National Standards Institute}
 	\acro{api}[API]{Application Programming Interface}
 	% \acro{AR}{Augmented Reality}
+	\acro{aws}[AWS]{Amazon Web Services}
 	% \acro{BAPI}{Business Application Programming Interface}
 	% \acro{BIOS}{Basic Input Output System}
 	\acro{bpmn}[BPMN]{Business Process Model and Notation}
@@ -18,13 +19,16 @@
 	\acro{cli}[CLI]{command-line interface}
 	\acro{csv}[CSV]{Comma-Separated Values}
 	\acro{erp}[ERP]{Enterprise Resource Planning}
+	\acro{hcl}[HCL]{HashiCorp Configuration Language}
 	\acro{hs2}[HS2]{High Speed 2}
 	% \acro{HTTP}{Hypertext Transfer Protocol}
 	% \acro{HTTPS}{Hypertext Transfer Protocol Secure}
+	\acro{iaas}[IaaS]{Infrastructure as a Service}
+	\acro{iac}[IaC]{Infrastructure as Code}
 	% \acro{IP}{Internet Protocol}
 	% \acro{ISBN}{Internationale Standardbuchnummer}
 	% \acrodefplural{ISBN}[ISBNs]{Internationale Standardbuchnummern}
-	\acro{JSON}{JavaScript Object Notation}
+	\acro{json}[JSON]{JavaScript Object Notation}
 	\acro{kpi}[KPI]{Key Performance Indicator}
 	% \acro{OData}{Open Data Protocol}
 	% \acro{SDK}{Software Development Kit}
