wrote sections about Jenkins and AWS

--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -16,8 +16,10 @@
 	\acro{bpmn}[BPMN]{Business Process Model and Notation}
 	\acro{ccwf}[ccWF]{Cross-Company Workflow}
 	% \acro{CDMA}{Code Division Multiple Access}
+	\acro{cicd}[CICD]{Continuous Integration and Continuous Delivery}
 	\acro{cli}[CLI]{command-line interface}
 	\acro{csv}[CSV]{Comma-Separated Values}
+	\acro{eks}[EKS]{Elastic Kubernetes Service}
 	\acro{erp}[ERP]{Enterprise Resource Planning}
 	\acro{hcl}[HCL]{HashiCorp Configuration Language}
 	\acro{hs2}[HS2]{High Speed 2}
@@ -31,6 +33,7 @@
 	\acro{json}[JSON]{JavaScript Object Notation}
 	\acro{kpi}[KPI]{Key Performance Indicator}
 	% \acro{OData}{Open Data Protocol}
+	\acro{s3}[S3]{Simple Storage Service}
 	% \acro{SDK}{Software Development Kit}
 	% \acro{SEO}{Search Engine Optimization}
 	\acro{sql}[SQL]{Structured Query Language}
