wrote approach for introduction

--- a/Inhalt/04_Inhalt/0100_introduction.tex
+++ b/Inhalt/04_Inhalt/0100_introduction.tex
@@ -19,3 +19,12 @@ Furthermore, the newly developed \ac{cli} is required to be able to get executed
 The ways of user interaction have to be designed accordingly.
 
 \section{Approach}
+First, the fundamentals of the tools and services that will be worked with are introduced.
+Most of these tools are fixed because of the current working set of the supervising department and because the target services that have to be interacted with are clearly defined.
+Although, some conceptional thoughts have to be put into the appropriate choice of libraries and \acp{api} that are used as a bridge between the programming language and the actual remote services.
+As an orientation for the bootstrapping procedure, an existing Python script will be leveraged.
+This script is checked for possible improvements and modernization potential.
+The newly developed procedure is then implemented as a general proof of concept.
+After this, unit tests will be established to prospectively ensure the structural integrity of the developed solution.
+Then, the solution has to be integrated with the \ac{cli}.
+Eventually, the developed bootstrap will be analyzed regarding economical aspects and possible weak points and a conclusion will be drawn.
