started writing on conceptional thoughts and added some source code to the repo

--- a/Inhalt/04_Inhalt/0200_fundamentals.tex
+++ b/Inhalt/04_Inhalt/0200_fundamentals.tex
@@ -109,7 +109,7 @@ Terraform additionally integrates tightly with other HashiCorp services like Vau
 \section{Kubernetes}
 \label{sec:kubernetes}
 Kubernetes (often short: k8s) is an open source solution to ease up and automate management of container based services.
-While doing so\todo{this sounds ugly}, it follows a declarative paradigm.
+It follows a declarative paradigm.
 This means that the users just needs to describe the desired state -- for example through the use of configuration files or via the Kubernetes \ac{cli} -- and Kubernetes determines the steps by itself which are necessary to reach and maintain this state.
 Kubernetes also enables users to dynamically scale their applications and services.
 This means that the amount of resources, that are dedicated to an application, is adapted during runtime dependent, for example, on the current number of users.
