--- a/Praxisbericht.tex
+++ b/Praxisbericht.tex
@@ -99,6 +99,8 @@
 % \include{content goes here}
 \include{Inhalt/04_Inhalt/0100_introduction}
 \include{Inhalt/04_Inhalt/0200_fundamentals}
+\include{Inhalt/04_Inhalt/0300_concept}
+\include{Inhalt/04_Inhalt/0400_implementation}
 \include{Inhalt/04_Inhalt/0500_future} % TODO: probably change number when more chapters arrive
 
 % ---- Literaturverzeichnis
