--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -23,7 +23,7 @@
 	\acro{erp}[ERP]{Enterprise Resource Planning}
 	\acro{hcl}[HCL]{HashiCorp Configuration Language}
 	\acro{hs2}[HS2]{High Speed 2}
-	% \acro{HTTP}{Hypertext Transfer Protocol}
+	\acro{http}[HTTP]{Hypertext Transfer Protocol}
 	% \acro{HTTPS}{Hypertext Transfer Protocol Secure}
 	\acro{iaas}[IaaS]{Infrastructure as a Service}
 	\acro{iac}[IaC]{Infrastructure as Code}
@@ -34,12 +34,13 @@
 	\acro{kpi}[KPI]{Key Performance Indicator}
 	% \acro{OData}{Open Data Protocol}
 	\acro{s3}[S3]{Simple Storage Service}
-	% \acro{SDK}{Software Development Kit}
+	\acro{sdk}[SDK]{Software Development Kit}
 	% \acro{SEO}{Search Engine Optimization}
 	\acro{sql}[SQL]{Structured Query Language}
 	% \acro{SSH}{Secure Shell}
 	% \acro{UEFI}{Unified Extensible Firmware Interface}
 	% \acro{URI}{Uniform Resource Identifier}
+	\acro{url}[URL]{Uniform Resource Locator}
 	% \acro{USB}{Universal Serial Bus}
 	\acro{vcs}[VCS]{Version Control System}
 	% \acro{VLAN}{Virtual Local Area Network}
