added section about aws go sdk and removed old abstracts

--- a/Inhalt/02_Abstract/abstract-en.tex
+++ b/Inhalt/02_Abstract/abstract-en.tex
@@ -11,17 +11,7 @@
 
 % LTeX: language=en-US
 
-In order to raise cross company processes to a new level SAP is working on the development of \acl*{ccwf}.
-The shared process data is to be imported into \emph{Signavio Process Intelligence} to be analyzed with process mining and to be presented in \aclp*{kpi}.
-Since \acl*{ccwf} uses the \emph{SAP Blockchain} to store data the preparation of the data for analysis within Signavio is a challenge.
-
-\vspace{0.25cm}
-
-In the context of this report, these difficulties will first be discussed.
-It then deals with the conceptual design of a data integration process.
-For this purpose, on the one hand, it is discussed where the conversion of the data from \acl*{ccwf} into the target format should be carried out.
-On the other hand, different transport routes are discussed, through which the processed data should be made available in Signavio Process Intelligence.
-Based on the developed concept, a prototype of the data integration is implemented.
+placeholder
 
 \end{addmargin}
 \end{abstract}
