--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -33,6 +33,7 @@
 	\acro{json}[JSON]{JavaScript Object Notation}
 	\acro{kpi}[KPI]{Key Performance Indicator}
 	% \acro{OData}{Open Data Protocol}
+	\acro{rest}[REST]{Representational State Transfer}
 	\acro{s3}[S3]{Simple Storage Service}
 	\acro{sdk}[SDK]{Software Development Kit}
 	% \acro{SEO}{Search Engine Optimization}
