--- a/Inhalt/02_Abstract/abstract-de.tex
+++ b/Inhalt/02_Abstract/abstract-de.tex
@@ -9,18 +9,9 @@
 
 \vspace{0.25cm}
 
-Um unternehmensübergreifende Prozesse auf ein neues Niveau zu heben, arbeitet SAP an der Entwicklung von \emph{\acl*{ccwf} Collaboration}.
-Die dort anfallenden, geteilten Prozessdaten sollen in \emph{Signavio Process Intelligence} importiert werden, um sie dort mittels Process Mining zu analysieren und in \aclp*{kpi} darzustellen.
-Da bei \acl*{ccwf} die \emph{SAP Blockchain} zur Datenhaltung verwendet wird, stellt die Aufbereitung der Daten für eine Analyse in Signavio jedoch eine Herausforderung dar.
+% LTeX: language=de-DE
 
-\vspace{0.25cm}
-
-Im Rahmen dieser Projektarbeit werden zunächst diese Schwierigkeiten herausgearbeitet.
-Anschließend wird sich mit der Konzeptionierung eines Datenintegrationsprozesses befasst.
-Hierzu wird zum einen erörtert, wo die Transformation der Daten aus \acl*{ccwf} in das angestrebte Format durchgeführt werden sollte.
-Andererseits werden auch verschiedene Transportwege beleuchtet, über die die aufbereiteten Daten in Signavio Process Intelligence bereitgestellt werden sollen.
-Auf Basis des erarbeiteten Konzepts wird ein Prototyp der Datenintegration implementiert.
-
+Platzhalter
 
 \end{addmargin}
 \end{abstract}
